--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,21 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
   just_audio: ^0.9.20
+  marquee: ^2.2.1
   miniplayer: ^1.0.1
   on_audio_query: ^2.6.0
   percent_indicator: ^4.0.0
   rxdart: ^0.27.3
 
 dev_dependencies:
+  build_runner: ^2.1.10
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
