--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.5.2
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  loading_animation_widget: ^1.1.0+5
   marquee: ^2.2.1
   miniplayer: ^1.0.1
   on_audio_query: ^2.6.0
   percent_indicator: ^4.0.0
   rxdart: ^0.27.3
+  share_plus: ^4.0.4
 
 dev_dependencies:
   build_runner: ^2.1.10
@@ -63,6 +66,13 @@ flutter:
     - asset/images/istockphoto-1287419324-170667a.jpg
     - asset/images/splash.png
     - asset/images/violence_1648392757927_1648392762660.webp
+    - asset/images/music_tape.jpg
+    - asset/images/musicgif.gif
+    - asset/images/new.jpg
+    - asset/images/new1.jpg
+    - asset/images/new2.png
+    - asset/images/new3.png
+    
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
