--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - asset/images/new1.jpg
     - asset/images/new2.png
     - asset/images/new3.png
+    - asset/images/logo.png
     
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
