--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
    <application
-        android:label="music_tape"
+        android:label="Music_tape"
         android:name="${applicationName}"
         android:icon="@mipmap/music">
         <activity
