--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.16.2 <3.0.1"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,18 +27,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  assets_audio_player: ^3.0.4+1
+  assets_audio_player: ^3.0.4+3
   audio_video_progress_bar: ^0.10.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
   flutter_screenutil: ^5.5.2
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   loading_animation_widget: ^1.1.0+5
   marquee: ^2.2.1
   miniplayer: ^1.0.1
-  on_audio_query: ^2.6.0
+  on_audio_query: ^2.6.1
   percent_indicator: ^4.0.0
   rxdart: ^0.27.3
   share_plus: ^4.0.4
@@ -72,7 +73,6 @@ flutter:
     - asset/images/new2.png
     - asset/images/new3.png
     - asset/images/logo.png
-    
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
